# haskell-book

./: README.md  haskell-book.cabal
src/: Ch15.hs  Ch17.hs  Ch22.hs
src/Ch15/: Monoid.hs  Semigroup.hs
src/Ch17/: Applicative.hs  List.hs
src/Ch22/: Reader.hs
src/Ch25/: Compose.hs  IdentityT.hs
src/Ch26/: MaybeT.hs
test/: test.hs
test/Tests/: Ch15.hs  Ch17.hs  Ch22.hs  Ch25.hs  Ch26.hs
test/Tests/Ch15/: Monoid.hs  Semigroup.hs
test/Tests/Ch17/: Applicative.hs
test/Tests/Ch22/: Reader.hs
test/Tests/Ch25/: Compose.hs  IdentityT.hs
test/Tests/Ch26/: MaybeT.hs
test/Tests/Laws/: Monoid.hs  Semigroup.hs
