name:          haskell-book
version:       0.1
author:        Dan Brooks
maintainer:    dmbrooks@live.co.uk
build-type:    Simple
cabal-version: >=1.10

library
  build-depends:    base,
                    containers,
                    mtl
  exposed-modules:  Ch15
                  , Ch17
                  , Ch22
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -O3

test-suite test
  type:             exitcode-stdio-1.0
  main-Is:          Test.hs
  hs-source-dirs:   src, test
  build-depends:    base >= 4.2 && < 5,
                    semigroups >= 0.18 && < 0.19,
                    tasty >= 0.11 && < 0.12,
                    tasty-hunit >= 0.9 && < 0.10,
                    tasty-quickcheck >= 0.9 && < 0.10
  ghc-options:      -rtsopts -fno-warn-unused-do-bind -threaded
  default-language: Haskell2010
